# pov

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pov/: __init__.py  __main__.py  cli.py  input.py  screenshot.py  server.py  window.py
